tests/phpt/parse_errors/fail_parens_inc.php
@kphp_should_fail
/Expected variable, found parenthesized expression/
<?php

$x = 10;
var_dump(($x)++);
